error.txt
  File "/home/runner/work/self-heal-CI-CD/self-heal-CI-CD/src/bug.py", line 35
    ```
    ^
SyntaxError: invalid syntax
